<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_you_wanna_do"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Tab" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/pickPhotoSourceSelectionDialog_takePhoto_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/make_photo" />

        <Button
            android:id="@+id/pickPhotoSourceSelectionDialog_chooseExisting_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/choose_existing" />
    </LinearLayout>

</LinearLayout>