<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/editProfile__avatarView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="9dp"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/default_avatar" />

            <EditText
                android:id="@+id/editProfile__name_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/DEFAULT_NAME"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorWhitePrimary"
                android:textColorHint="@color/colorWhiteHint"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/editProfile__surname_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/DEFAULT_NAME"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorWhitePrimary"
                android:textColorHint="@color/colorWhiteHint"
                android:textSize="24sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

        <TextView
            android:id="@+id/editProfile__phone_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif"
            android:text="Phone:"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editProfile__phone_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="phone"
            android:hint="@string/default_phone"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/editProfile__email_label_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif"
                android:text="E-mail:"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editProfile__email_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:hint="usermail@example.by"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/editProfile__save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_save"/>

    </LinearLayout>
    </ScrollView>
</FrameLayout>